test_case/rust-lang_rust/58566_465150337_87.rs
\n\nWith this approach, x and y share ownership of the data via the `Rc` (reference\ncount type). `RefCell` essentially performs runtime borrow checking: ensuring\nthat at most one writer or multiple readers can access the data at any one time.\n\nIf you wish to learn more about ownership in Rust, start with the chapter in the\nBook:\n\nhttps://doc.rust-lang.org/book/ch04-00-understanding-ownership.html\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/unsized-locals/double-move.rs","byte_start":874,"byte_end":876,"line_start":44,"line_end":44,"column_start":18,"column_end":20,"is_primary":false,"text":[{"text":"        let _y = *x;","highlight_start":18,"highlight_end":20}],"label":"value moved here","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/unsized-locals/double-move.rs","byte_start":886,"byte_end":887,"line_start":45,"line_end":45,"column_start":9,"column_end":10,"is_primary":true,"text":[{"text":"        x.foo(); //~ERROR use of moved value","highlight_start":9,"highlight_end":10}],"label":"value used here after move","suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[{"message":"move occurs because `*x` has type `str`, which does not implement the `Copy` trait","code":null,"level":"note","spans":[],"children":[],"rendered":null}],"rendered":"error[E0382]: use of moved value: `*x`\n  --> /checkout/src/test/ui/unsized-locals/double-move.rs:45:9\n   |\nLL |         let _y = *x;\n   |                  -- value moved here\nLL |         x.foo(); //~ERROR use of moved value\n   |         ^ value used here after move\n   |\n   = note: move occurs because `*x` has type `str`, which does not implement the `Copy` trait\n\n"}
[01:30:22] {"message":"use of moved value: `*x`","code":{"code":"E0382","explanation":"\nThis error occurs when an attempt is made to use a variable after its contents\nhave been moved elsewhere. For example:\n\n